--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -48,6 +48,8 @@
                 /* identical to box height */
                 letter-spacing: 0.05em;
 
+                cursor: pointer;
+
                 color: #FFFFFF;
 
                 &:hover {
