--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -98,4 +98,21 @@
     left: 75rem;
     top: 25%;
   }
+
+  .play-pause-btn {
+    position: absolute;
+    left: 40rem;
+    top: 15rem;
+
+    width: 10rem;
+    height: 3rem;
+  }
+  .top-view-btn {
+    position: absolute;
+    left: 50rem;
+    top: 15rem;
+
+    width: 10rem;
+    height: 3rem;
+  }
 }
