--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -6,113 +6,167 @@
   background-color: #830b0e;
   overflow: hidden;
 
-  .title {
-    /* TASTE THE */
+  // margin-top: 10rem;
 
-    position: absolute;
-    width: 26rem;
-    height: 7.5rem;
-    left: 4rem;
-    top: 23rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center !important;
+  justify-content: space-between !important;
 
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 5rem;
-    line-height: 7.5rem;
-    text-transform: uppercase;
+  .text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 
-    color: #ffffff;
+    height: 100%;
+    width: 45%;
+
+    // margin-top: 15rem;
+    margin-left: 4rem;
+
+    .title {
+      /* TASTE THE */
+
+      font-family: "Poppins", sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 5rem;
+      line-height: 4rem;
+      text-transform: uppercase;
+
+      color: #ffffff;
+    }
+
+    .sub-title {
+      font-family: "Poppins", sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 9rem;
+      line-height: 7.5rem;
+      text-transform: uppercase;
+
+      color: #ffffff;
+    }
+
+    .description {
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 300;
+      font-size: 1rem;
+      line-height: 2rem;
+
+      padding-left: 0.5rem;
+
+      // width: 45%;
+
+      color: #ffffff;
+    }
+
+    .view-all-products-btn {
+      color: #000;
+
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 1rem;
+      line-height: 2rem;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+
+      padding-left: 1rem;
+      padding-right: 1rem;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+
+      border: none;
+
+      border-radius: 2rem;
+    }
   }
 
-  .sub-title {
-    position: absolute;
-    width: 26rem;
-    height: 7.5rem;
-    left: 4rem;
-    top: 29rem;
-
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 9rem;
-    line-height: 7.5rem;
-    text-transform: uppercase;
-
-    color: #ffffff;
-  }
-
-  .description {
-    position: absolute;
-    width: 50rem;
-    height: 12rem;
-    left: 4.5rem;
-    top: 37rem;
-
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 300;
-    font-size: 1rem;
-    line-height: 2rem;
-
-    color: #ffffff;
-  }
-
-  .view-all-products-btn {
-    color: #000;
-
-    position: absolute;
-    width: 13rem;
-    height: 3rem;
-    left: 4rem;
-    top: 44rem;
-
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1rem;
-    line-height: 2rem;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-
-    border: none;
-
-    border-radius: 2rem;
-  }
-
-  .cola-can-canvas {
-    position: absolute;
-    width: 35rem;
-    height: 35rem;
-    left: 40rem;
-    top: 5rem;
+  .cola-can-container{
+    height: 100%;
+    width: 55%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
   }
 
   .cola-can {
-    /* CokeCan_1334x 1 */
-
-    position: absolute;
     width: 35rem;
     height: 35rem;
-    left: 75rem;
-    top: 25%;
   }
+}
 
-  .play-pause-btn {
-    position: absolute;
-    left: 40rem;
-    top: 15rem;
+@media (max-width: 768px) {
+  .homepage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    width: 10rem;
-    height: 3rem;
-  }
-  .top-view-btn {
-    position: absolute;
-    left: 50rem;
-    top: 15rem;
+    .title {
+      width: 20rem;
+      height: 5rem;
+      left: 2rem;
+      top: 15rem;
 
-    width: 10rem;
-    height: 3rem;
+      font-size: 3rem;
+      line-height: 5rem;
+    }
+
+    .sub-title {
+      width: 20rem;
+      height: 5rem;
+      left: 2rem;
+      top: 20rem;
+
+      font-size: 5rem;
+      line-height: 5rem;
+    }
+
+    .description {
+      width: 30rem;
+      height: 8rem;
+      left: 2.5rem;
+      top: 25rem;
+
+      font-size: 0.8rem;
+      line-height: 1.5rem;
+    }
+
+    .view-all-products-btn {
+      width: 10rem;
+      height: 2rem;
+      left: 2rem;
+      top: 30rem;
+
+      font-size: 0.8rem;
+      line-height: 1.5rem;
+    }
+
+    .cola-can {
+      width: 25rem;
+      height: 25rem;
+      left: 0;
+      top: 25%;
+    }
+
+    .play-pause-btn {
+      left: 30rem;
+      top: 10rem;
+
+      width: 8rem;
+      height: 2rem;
+    }
+    .top-view-btn {
+      left: 38rem;
+      top: 10rem;
+
+      width: 8rem;
+      height: 2rem;
+    }
   }
 }
