--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -102,71 +102,51 @@
 
 @media (max-width: 768px) {
   .homepage {
-    display: flex;
-    flex-direction: column;
+    margin-top: 6rem;
+    flex-direction: column-reverse;
+
     align-items: center;
     justify-content: center;
 
-    .title {
-      width: 20rem;
-      height: 5rem;
-      left: 2rem;
-      top: 15rem;
+    .text-container {
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
 
-      font-size: 3rem;
-      line-height: 5rem;
+      margin-left: 0;
+      padding: 1rem;
+
+      .title {
+        font-size: 3rem;
+        line-height: 3rem;
+      }
+
+      .sub-title {
+        font-size: 5rem;
+        line-height: 5rem;
+      }
+
+      .description {
+        font-size: 1rem;
+        line-height: 1.5rem;
+      }
+
+      .view-all-products-btn {
+        font-size: 1rem;
+        line-height: 1.5rem;
+      }
     }
 
-    .sub-title {
-      width: 20rem;
-      height: 5rem;
-      left: 2rem;
-      top: 20rem;
-
-      font-size: 5rem;
-      line-height: 5rem;
-    }
-
-    .description {
-      width: 30rem;
-      height: 8rem;
-      left: 2.5rem;
-      top: 25rem;
-
-      font-size: 0.8rem;
-      line-height: 1.5rem;
-    }
-
-    .view-all-products-btn {
-      width: 10rem;
-      height: 2rem;
-      left: 2rem;
-      top: 30rem;
-
-      font-size: 0.8rem;
-      line-height: 1.5rem;
+    .cola-can-container {
+      width: 100%;
+      align-items: center;
+      justify-content: center;
     }
 
     .cola-can {
       width: 25rem;
       height: 25rem;
-      left: 0;
-      top: 25%;
-    }
-
-    .play-pause-btn {
-      left: 30rem;
-      top: 10rem;
-
-      width: 8rem;
-      height: 2rem;
-    }
-    .top-view-btn {
-      left: 38rem;
-      top: 10rem;
-
-      width: 8rem;
-      height: 2rem;
     }
   }
 }
