--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -6,6 +6,8 @@
   background-color: #830b0e;
   overflow: hidden;
 
+  // margin-top: 3rem;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -88,27 +90,23 @@
       border-radius: 0.625rem; /* 10px */
       box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
     }
+  }
+}
 
-    @media (max-width: 48rem) {
-      /* 768px */
-      .container {
-        margin: 0 0.625rem; /* 10px */
-      }
+@media (max-width: 768px) {
+  .contact {
+    margin-top: 3rem;
 
-      button {
-        max-width: 12.5rem; /* 200px */
-      }
+    .title {
+      font-size: 3rem;
+      line-height: 3rem;
+      margin-top: 3rem;
+      margin-bottom: 2rem;
     }
 
-    @media (max-width: 30rem) {
-      /* 480px */
-      body {
-        padding: 0.625rem; /* 10px */
-      }
-
-      .container {
-        padding: 0.9375rem; /* 15px */
-      }
+    .form {
+      width: 85%;
+      border-radius: 2%;
     }
   }
 }
