--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -29,7 +29,7 @@
   }
 
   .menu-toggle {
-    display: none;
+    display: none !important;
     cursor: pointer;
     background-color: transparent; // Şeffaf arka plan
     border: 3px solid #fff; // Beyaz kenarlık
@@ -44,7 +44,7 @@
     padding: 0;
 
     @media (max-width: 768px) {
-      display: block;
+      display: block !important;
     }
   }
 
