--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -6,7 +6,7 @@
   background-color: #830b0e;
   overflow: hidden;
 
-  // margin-top: 3rem;
+  margin-top: 3rem;
 
   display: flex;
   justify-content: center;
@@ -40,6 +40,7 @@
     border-radius: 2%;
 
     padding: 1rem;
+    margin-bottom: 3rem;
 
     .form-group {
       margin-bottom: 1.25rem; /* 20px */
