--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -2,11 +2,10 @@
   position: relative;
   width: 100vw;
   height: 100%;
+  min-height: 100vh;
   align-items: flex-start;
   background-color: #830b0e;
   overflow: hidden;
-
-  margin-top: 3rem;
 
   display: flex;
   justify-content: center;
