--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -6,7 +6,7 @@
 
   height: 10rem;
 
-  background-color: #830b0e;
+  background-color: transparent;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
