change navbar color dynamicly

--- a/src/assets/styles/fanta.scss
+++ b/src/assets/styles/fanta.scss
@@ -189,6 +189,10 @@
     align-items: center;
     justify-content: center;
 
+    .navbar{
+      background-color: #ff7600;
+    }
+
     .text-container {
       position: absolute;
       top: 5%;
