--- a/src/assets/styles/sprite.scss
+++ b/src/assets/styles/sprite.scss
@@ -211,6 +211,10 @@
     align-items: center;
     justify-content: center;
 
+    .navbar{
+      background-color: #01c441;
+    }
+
     .text-container {
       top: 15%;
       left: 30%;
