Adjust positioning and styling of control buttons and history container

--- a/src/assets/styles/cola.scss
+++ b/src/assets/styles/cola.scss
@@ -201,7 +201,11 @@
     }
 
     .control-buttons {
-      top: 18%;
+      top: 20%;
+    }
+
+    .history-container{
+      margin-bottom: -22rem;
     }
   }
 }
