--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -134,3 +134,50 @@
     }
   }
 }
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .about {
+    flex-direction: column-reverse;
+
+    align-items: center;
+    justify-content: center;
+
+    .img-container {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: start;
+      align-items: start;
+      margin-top: 4rem;
+      margin-bottom: -25rem;
+
+      .about-img {
+        display: none;
+      }
+
+      .about-img-mobile {
+        display: block;
+        width: 100%;
+        height: 30rem;
+        //zoom in image
+        object-fit: cover;
+      }
+    }
+
+    .text-container {
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+
+      margin-left: 0;
+      padding: 1rem;
+
+      margin-top: -5rem;
+
+      .sub-title{
+        margin-bottom: 2rem;
+      }
+    }
+  }
+}
