--- a/src/assets/styles/cola.scss
+++ b/src/assets/styles/cola.scss
@@ -164,9 +164,7 @@
 
 @media (max-width: 768px) {
   .cola {
-    // margin-top: 6rem;
     flex-direction: column;
-
     align-items: center;
     justify-content: center;
 
@@ -204,8 +202,47 @@
       top: 20%;
     }
 
-    .history-container{
+    .history-container {
       margin-bottom: -22rem;
     }
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .cola {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .navbar {
+    position: relative;
+    width: 100vw;
+  }
+
+  .background-text {
+    width: 100%;
+    text-align: center !important;
+
+    margin-top: 4rem !important;
+    font-size: 12rem !important;
+    letter-spacing: 0.6em !important;
+    line-height: 16rem !important;
+    margin-left: -5rem !important;
+  }
+
+  .cola-can-canvas {
+    margin-top: -2rem;
+    height: 40rem !important;
+    position: relative !important;
+  }
+
+  .title {
+    margin-top: 6rem;
+  }
+
+  .description {
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
   }
 }
