--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -112,3 +112,22 @@
     }
   }
 }
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .contact {
+    min-height: auto;
+
+    .title {
+      font-size: 3rem;
+      line-height: 3rem;
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+    }
+
+    .form {
+      width: 80%;
+      border-radius: 2%;
+      margin-bottom: 3rem;
+    }
+  }
+}
