--- a/src/assets/styles/drinks.scss
+++ b/src/assets/styles/drinks.scss
@@ -183,3 +183,61 @@
     }
   }
 }
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .drinks {
+    .title {
+      font-size: 3rem;
+      line-height: 3rem;
+      margin-top: 3rem;
+    }
+
+    .drinks-row {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: center;
+      margin-top: 3rem;
+    }
+
+    .cola-col {
+      margin: 1rem;
+
+      height: 20rem;
+      width: 20rem;
+
+      .cola-img {
+        width: 100%;
+        padding: 1rem;
+        object-fit: cover;
+      }
+    }
+
+    .sprite-col {
+      margin: 1rem;
+
+      height: 20rem;
+      width: 20rem;
+
+      .sprite-img {
+        width: 100%;
+        padding: 1rem;
+        object-fit: cover;
+      }
+    }
+
+    .fanta-col {
+      margin: 1rem;
+      margin-top: 3rem;
+
+      height: 20rem;
+      width: 20rem;
+
+      .fanta-img {
+        width: 100%;
+        padding: 1rem;
+        object-fit: cover;
+      }
+    }
+  }
+}
