--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -149,7 +149,7 @@
       justify-content: start;
       align-items: start;
       margin-top: 4rem;
-      margin-bottom: -25rem;
+      // margin-bottom: -25rem;
 
       .about-img {
         display: none;
