--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -15,7 +15,7 @@
 
   .home-container {
     width: 100%;
-    height: 100%;
+    height: 100vh !important;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,10 +23,12 @@
   }
 
   .video-container {
-    margin-bottom: 2rem;
+    // margin-bottom: 2rem;
 
     video {
       width: 100vw;
+      height: 100vh;
+      object-fit: cover;
       // border: 3px solid #fff;
       // border-radius: 0.75rem;
     }
@@ -122,10 +124,33 @@
 @media (max-width: 768px) {
   .homepage {
     margin-top: 6rem;
-    flex-direction: column-reverse;
+    flex-direction: column;
 
     align-items: center;
     justify-content: center;
+
+    .home-container {
+      width: 100%;
+      height: 100vh !important;
+      display: flex;
+      flex-direction: column;
+
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 0rem;
+    }
+
+    .video-container {
+      // margin-top: 4rem;
+
+      video {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        // border: 3px solid #fff;
+        // border-radius: 0.75rem;
+      }
+    }
 
     .text-container {
       width: 100%;
@@ -176,6 +201,29 @@
 
     align-items: center;
     justify-content: center;
+
+    .home-container {
+      width: 100%;
+      height: 100vh !important;
+      display: flex;
+      flex-direction: column-reverse;
+
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 0rem;
+    }
+
+    .video-container {
+      // margin-top: 4rem;
+
+      video {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        // border: 3px solid #fff;
+        // border-radius: 0.75rem;
+      }
+    }
 
     .text-container {
       width: 100%;
