--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -27,8 +27,8 @@
 
     video {
       width: 100vw;
-      height: 100vh;
-      object-fit: cover;
+      // height: 100vh;
+      // object-fit: cover;
       // border: 3px solid #fff;
       // border-radius: 0.75rem;
     }
