--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -27,8 +27,8 @@
 
     video {
       width: 100vw;
-      // height: 100vh;
-      // object-fit: cover;
+      height: 100vh;
+      object-fit: cover;
       // border: 3px solid #fff;
       // border-radius: 0.75rem;
     }
@@ -141,7 +141,7 @@
     }
 
     .video-container {
-      // margin-top: 4rem;
+      margin-top: 4rem;
 
       video {
         width: 100vw;
@@ -214,7 +214,7 @@
     }
 
     .video-container {
-      // margin-top: 4rem;
+      margin-top: 4rem;
 
       video {
         width: 100vw;
