--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -17,6 +17,7 @@
     width: 100%;
     height: 100vh !important;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
     margin-bottom: 0rem;
