--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -207,16 +207,17 @@
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .homepage {
-    flex-direction: column-reverse;
+    flex-direction: column;
 
     align-items: center;
     justify-content: center;
 
     .home-container {
+      margin-top: 3rem;
       width: 100%;
       height: 100vh !important;
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
 
       align-items: center;
       justify-content: center;
@@ -244,7 +245,7 @@
       margin-left: 0;
       padding: 1rem;
 
-      margin-top: -5rem;
+      margin-top: 0rem;
 
       .title {
         margin-top: 0;
@@ -282,6 +283,9 @@
       // margin-top: 4rem;
       width: 40rem;
       height: 40rem;
+    }
+    .scrollButton {
+      bottom: 5px;
     }
   }
 }
