--- a/src/assets/styles/homepage.scss
+++ b/src/assets/styles/homepage.scss
@@ -124,7 +124,7 @@
   .scrollButton {
     cursor: pointer;
     position: absolute;
-    bottom: 20px; /* Sayfanın altından itibaren 20px yukarıda */
+    bottom: 0; /* Sayfanın altından itibaren 20px yukarıda */
     left: 50%; /* Yatay olarak ortala */
     transform: translateX(-50%); /* Sol tarafa doğru yarısının genişliği kadar kaydır */
     z-index: 1000; /* Diğer içeriklerin üstünde görünmesini sağla */
@@ -285,7 +285,7 @@
       height: 40rem;
     }
     .scrollButton {
-      bottom: 5px;
+      bottom: 0;
     }
   }
 }
