Add responsive styling for small screens in about.scss

--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -74,6 +74,14 @@
   }
 }
 
+@media (max-width: 400px) {
+  .about {
+    .text-container {
+      padding: 0rem !important;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .about {
     margin-top: 6rem;
