--- a/src/assets/styles/sprite.scss
+++ b/src/assets/styles/sprite.scss
@@ -210,7 +210,26 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (width: 768px) {
+  .sprite {
+    .text-container {
+      top: 25% !important;
+    }
+
+    .sprite-bottle-canvas {
+      top: 30% !important;
+    }
+
+    .history-container{
+      .description {
+        padding-left: 2rem !important;
+        padding-right: 2rem !important;
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
   .sprite {
     // margin-top: 6rem;
     flex-direction: column;
@@ -279,7 +298,7 @@
   }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .sprite {
     flex-direction: column;
 
